chore: update .gitignore to exclude docs directory and add Doxygen documentation target in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,3 +37,17 @@ add_custom_target(run
     COMMAND gcheck_exec --json --option2
     DEPENDS gcheck_exec
 )
+
+# Create doxygen documentation target
+find_package(Doxygen REQUIRED)
+# set input and output files
+set(DOXYGEN_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile)
+set(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
+# copy the doxygen configuration file and expand CMake variable
+configure_file(${DOXYGEN_IN} ${DOXYGEN_OUT} @ONLY)
+
+add_custom_target(doc_doxygen
+    COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+    COMMENT "Generating API documentation with Doxygen"
+    VERBATIM)
